Change fonts; Fix paragraph and header formatting

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,7 @@
 
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Alegreya:400,500" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/grayscale.css" rel="stylesheet">
@@ -70,26 +69,24 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <p>
-              Saturday, August 25, 2018
+              Saturday, August 25, 2018<br/>5:00 PM
             </p>
             <p>
-              5:00 PM
-            </p>
-            <p>
-              Riverside Receptions &amp; Conference Center
-            </p>
-            <p>
+              Riverside Receptions &amp; Conference Center<br/>
               <a href="https://goo.gl/maps/2guQE2dbioT2" target="_blank">35 North River Lane, Geneva, Illinois 60134</a>
             </p>
             <p>
               Join us for a reception immediately following the ceremony at Riverside Receptions &amp; Conference Center.
             </p>
             <p>
-              Pleast note, we will be having an <i>Unplugged Ceremony</i>. We will ask that you turn off all cameras,
+              Please note, we will be having an <i>Unplugged Ceremony</i>. We will ask that you turn off all cameras,
               cell phones and other electronics until after the ceremony to be fully present during our special moment.
             </p>
             <p>
-              <i>Attire</i><br />Formal
+              <h3>Attire</h3>
+            </p>
+            <p>
+              Formal
             </p>
           </div>
         </div>
@@ -112,22 +109,16 @@
           <p>
             <a href="https://goo.gl/maps/Yy98F938DEF2" target="_blank">4070 East Main Street, St. Charles, Illinois 60147</a>
           </p>
-          <p>
-            <i>Transportation</i>
-          </p>
+          <h3>Transportation</h3>
           <p>
             Transportation will be available for guests staying at Hilton Garden Inn. Transportation will leave the hotel at 4:15 PM
             to Riverside Receptions. Following the reception, transportation will return at 11:30 PM.
           </p>
-          <p>
-            <i>Parking</i>
-          </p>
+          <h3>Parking</h3>
           <p>
             A free parking lot is available across the street from Riverside Receptions. Street parking is also avaible.
           </p>
-          <p>
-            <i>Questions?</i>
-          </p>
+          <h3>Questions?</h3>
           <p>
             Please contact <a href="mailto:milesvojakwedding@gmail.com">milesvojakwedding@gmail.com</a>
           </p>
@@ -170,12 +161,32 @@
     <section id="rsvp" class="content-section text-center">
       <div class="container">
         <img src="img/rsvp.svg" class="calligraphy-header" />
-        <div class="col-lg-8 mx-auto">
+        <div id="rsvp-button" class="col-lg-8 mx-auto">
           <div class="row text-center">
             <div class="col-sm">
               <a href="./rsvp.html" class="btn-default">RSVP Here</a>
             </div>
           </div>
+        </div>
+        <div class="col-lg-8 mx-auto">
+          <h3>Meal Options</h3>
+          <p>
+            <b>Proscuitto-Stuffed Chicken Breast</b>
+            <br />
+            Proscuitto, Spinach, &amp; Goat Cheese stuffed Chicken Breast with Garlic Cream Sauce
+            <br />
+            Served with Carmelized Sweet Potatoes &amp; Seasoned Green Beans
+          </p>
+          <p>
+            <b>Butternut Squash Ravioli</b>
+            <br />
+            Hand-made Butternut Squash Ravioli with Sage Cream Sauce and Ratatouille
+          </p>
+          <p>
+            <b>12 &amp; Under Children's Entrée</b>
+            <br />
+            Chicken Tenders and Fries
+          </p>
         </div>
       </div>
     </section>
