--- a/public/rsvp.html
+++ b/public/rsvp.html
@@ -14,8 +14,7 @@
 
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Alegreya:400,500" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/grayscale.css" rel="stylesheet">
@@ -33,22 +32,24 @@
               <img src="img/calligraphy-desktop.svg" id="calligraphy-desktop" />
               <img src="img/calligraphy-mobile.svg" id="calligraphy-mobile" />
             </div>
-
+            <!-- Embedded RSVPify form -->
             <script type="text/javascript" src="https://app.rsvpify.com/embed/500048523"></script>
             <script type="text/javascript" src="https://app.rsvpify.com/js/iframeResizer.min.js"></script>
-            <script type="text/javascript">iFrameResize({autoResize: true,checkOrigin: false,heightCalculationMethod: 'max',enablePublicMethods: true}, "#RSVPifyIFrame");</script>
+            <script type="text/javascript">
+              iFrameResize({autoResize: true,checkOrigin: false,heightCalculationMethod: 'max',enablePublicMethods: true}, "#RSVPifyIFrame");
+            </script>
 
           </div>
         </div>
 
-        <!-- TODO: Break out this styling into custom.css -->
-        <div class="row" style="margin-top:20px; margin-bottom:20px;">
+        <div id="home-button" class="row">
           <div class="col-lg-8 mx-auto">
             <a href="./index.html" class="btn-default">
-              &#171; Home
+              Home
             </a>
           </div>
         </div>
+
       </div>
     </section>
 
