cleaning up styling and spacing

--- a/public/index.html
+++ b/public/index.html
@@ -79,12 +79,10 @@
               Join us for a reception immediately following the ceremony at Riverside Receptions &amp; Conference Center.
             </p>
             <p>
-              Please note, we will be having an <i>Unplugged Ceremony</i>. We will ask that you turn off all cameras,
-              cell phones and other electronics until after the ceremony to be fully present during our special moment.
+              Please note, we will be having an <i>Unplugged Ceremony</i>.<br/>
+              We will ask that you turn off all cameras, cell phones and other electronics until after the ceremony to be fully present during our special moment.
             </p>
-            <p>
-              <h3>Attire</h3>
-            </p>
+            <h3>Attire</h3>
             <p>
               Formal
             </p>
@@ -102,12 +100,12 @@
             <img id="hotel-vector" src="img/hiltongardeninn.svg" />
           </a>
           <p>
+            <a href="https://goo.gl/maps/Yy98F938DEF2" target="_blank">4070 East Main Street, St. Charles, Illinois 60147</a>
+          </p>
+          <p>
             A block of rooms has been reserved for our guests at a discounted rate at
             <a href="http://hiltongardeninn3.hilton.com/en/hotels/illinois/hilton-garden-inn-st-charles-CHISCGI/index.html" target="_blank">
               Hilton Garden Inn St. Charles</a>. Please use the group code MILVOJ online or reference the Miles Vojak wedding when calling.
-          </p>
-          <p>
-            <a href="https://goo.gl/maps/Yy98F938DEF2" target="_blank">4070 East Main Street, St. Charles, Illinois 60147</a>
           </p>
           <h3>Transportation</h3>
           <p>
@@ -116,7 +114,7 @@
           </p>
           <h3>Parking</h3>
           <p>
-            A free parking lot is available across the street from Riverside Receptions. Street parking is also avaible.
+            A free parking lot is available across the street from Riverside Receptions. Street parking is also available.
           </p>
           <h3>Questions?</h3>
           <p>
@@ -169,7 +167,7 @@
           </div>
         </div>
         <div class="col-lg-8 mx-auto">
-          <h3>Meal Options</h3>
+          <h3 id="meals-header">Meal Options</h3>
           <p>
             <b>Proscuitto-Stuffed Chicken Breast</b>
             <br />
