--- a/public/index.html
+++ b/public/index.html
@@ -169,11 +169,11 @@
         <div class="col-lg-8 mx-auto">
           <h3 id="meals-header">Meal Options</h3>
           <p>
-            <b>Proscuitto-Stuffed Chicken Breast</b>
+            <b>Prosciutto-Stuffed Chicken Breast</b>
             <br />
-            Proscuitto, Spinach, &amp; Goat Cheese stuffed Chicken Breast with Garlic Cream Sauce
+            Prosciutto, Spinach, &amp; Goat Cheese stuffed Chicken Breast with Garlic Cream Sauce
             <br />
-            Served with Carmelized Sweet Potatoes &amp; Seasoned Green Beans
+            Served with Caramelized Sweet Potatoes &amp; Seasoned Green Beans
           </p>
           <p>
             <b>Butternut Squash Ravioli</b>
