Fix French Fries; Fix spacing when scrolling to sections

--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,7 @@
           <p>
             <b>12 &amp; Under Children's Entrée</b>
             <br />
-            Chicken Tenders and Fries
+            Chicken Tenders and French Fries
           </p>
         </div>
       </div>
