Adding filet mignon meal option

--- a/public/index.html
+++ b/public/index.html
@@ -176,9 +176,20 @@
             Served with Caramelized Sweet Potatoes &amp; Seasoned Green Beans
           </p>
           <p>
+            <b>Filet Mignon</b>
+            <br />
+            Grilled Filet with a Port Wine Reduction &amp; Topped with Caramelized Onions
+            <br />
+            Served with Roasted Garlic Mashed Potatoes and Grilled Asparagus with Roasted Red Peppers
+            <br />
+            <i>Gluten-Free</i>
+          </p>
+          <p>
             <b>Butternut Squash Ravioli</b>
             <br />
             Hand-made Butternut Squash Ravioli with Sage Cream Sauce and Ratatouille
+            <br />
+            <i>Vegetarian</i>
           </p>
           <p>
             <b>12 &amp; Under Children's Entrée</b>
