Update meal options

--- a/public/index.html
+++ b/public/index.html
@@ -176,11 +176,11 @@
             Served with Caramelized Sweet Potatoes &amp; Seasoned Green Beans
           </p>
           <p>
-            <b>Filet Mignon</b>
+            <b>Pork Tenderloin Medallions</b>
             <br />
-            Grilled Filet with a Port Wine Reduction &amp; Topped with Caramelized Onions
+            Grilled Pork Tenderloin with Apple jus
             <br />
-            Served with Roasted Garlic Mashed Potatoes and Grilled Asparagus with Roasted Red Peppers
+            Served with Rice Pilaf, Seasoned Green Beans and Cranberry Chutney
             <br />
             <i>Gluten-Free</i>
           </p>
