--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Wedding website of Amanda Miles and Andrew Vojak">
+    <meta name="author" content="Andrew Vojak">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="img/favicon/favicon.png" sizes="32x32">
+    <link rel="shortcut icon" href="img/favicon/favicon.ico">
+    <meta name="msapplication-TileImage" content="img/favicon/mstile-144x144.png">
+    <meta name="msapplication-TileColor" content="#2D5A8E">
 
     <title>Andrew &amp; Amanda</title>
 
