--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
                     <a class="nav-link js-scroll-trigger" href="#wedding">Wedding</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#accommodations">accommodations</a>
+                    <a class="nav-link js-scroll-trigger" href="#accommodations">Accommodations</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#registry">Registry</a>
@@ -137,12 +137,6 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <div class="row text-center vertical-align">
-              <!-- Bed Bath & Beyond -->
-              <div class="col-sm registry-link">
-                <a href="https://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&inventoryCallEnabled=true&registryId=545278823&pwsurl=" target="_blank">
-                  <img src="img/bbb.svg" />
-                </a>
-              </div>
               <!-- Macy's -->
               <div class="col-sm registry-link">
                 <a href="https://www.macys.com/wgl/registry/guest/6852111" target="_blank">
@@ -153,6 +147,12 @@
               <div class="col-sm registry-link">
                 <a href="https://www.crateandbarrel.com/gift-registry/andrew-vojak-and-amanda-miles/r5771735" target="_blank">
                   <img src="img/cratebarrel.svg" />
+                </a>
+              </div>
+              <!-- Bed Bath & Beyond -->
+              <div class="col-sm registry-link">
+                <a href="https://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&inventoryCallEnabled=true&registryId=545278823&pwsurl=" target="_blank">
+                  <img src="img/bbb.svg" />
                 </a>
               </div>
             </div>
