Add cocktail hour and dinner times; Remove attire note

--- a/public/index.html
+++ b/public/index.html
@@ -84,13 +84,17 @@
             <p>
               Join us for a reception immediately following the ceremony at Riverside Receptions &amp; Conference Center.
             </p>
+            <h3>Cocktail Hour</h3>
+            <p>
+              5:30 PM
+            </p>
+            <h3>Dinner</h3>
+            <p>
+              6:30 PM
+            </p>
             <p>
               Please note, we will be having an <i>Unplugged Ceremony</i>.<br/>
               We will ask that you turn off all cameras, cell phones and other electronics until after the ceremony to be fully present during our special moment.
-            </p>
-            <h3>Attire</h3>
-            <p>
-              Formal
             </p>
           </div>
         </div>
