Updated hotel details

--- a/public/index.html
+++ b/public/index.html
@@ -106,21 +106,16 @@
       <div class="container">
         <img src="img/accommodations.svg" class="calligraphy-header" />
         <div class="col-lg-8 mx-auto">
-          <a href="http://hiltongardeninn3.hilton.com/en/hotels/illinois/hilton-garden-inn-st-charles-CHISCGI/index.html" target="_blank">
-            <img id="hotel-vector" src="img/hiltongardeninn.svg" />
+          <a href="https://www.ihg.com/holidayinnexpress/hotels/us/en/saint-charles/chisa/hoteldetail" target="_blank">
+            <img id="hotel-vector" src="img/hi-express.svg" />
           </a>
           <p>
-            <a href="https://goo.gl/maps/Yy98F938DEF2" target="_blank">4070 East Main Street, St. Charles, Illinois 60147</a>
+            <a href="https://goo.gl/maps/8CWAK4oVWh22" target="_blank">155 38th Avenue, St. Charles, Illinois 60174</a>
           </p>
           <p>
             A block of rooms has been reserved for our guests at a discounted rate at
-            <a href="http://hiltongardeninn3.hilton.com/en/hotels/illinois/hilton-garden-inn-st-charles-CHISCGI/index.html" target="_blank">
-              Hilton Garden Inn St. Charles</a>. Please use the group code MILVOJ online or reference the Miles Vojak wedding when calling.
-          </p>
-          <h3>Transportation</h3>
-          <p>
-            Transportation will be available for guests staying at Hilton Garden Inn. Transportation will leave the hotel at 4:15 PM
-            to Riverside Receptions. Following the reception, transportation will return at 11:10 PM.
+            <a href="https://www.ihg.com/holidayinnexpress/hotels/us/en/saint-charles/chisa/hoteldetail" target="_blank">
+              Holiday Inn Express &amp; Suites Chicago West - St Charles</a>. Please reference the Miles Vojak wedding when calling.
           </p>
           <h3>Parking</h3>
           <p>
