Add link for hotel block booking

--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,10 @@
           <p>
             A block of rooms has been reserved for our guests at a discounted rate at
             <a href="https://www.ihg.com/holidayinnexpress/hotels/us/en/saint-charles/chisa/hoteldetail" target="_blank">
-              Holiday Inn Express &amp; Suites Chicago West - St Charles</a>. Please reference the Miles Vojak wedding when calling.
+              Holiday Inn Express &amp; Suites Chicago West - St Charles</a>. Please use
+              <a href="https://www.hiexpress.com/redirect?path=rates&brandCode=EX&localeCode=en&regionCode=1&hotelCode=CHISA&checkInDate=25&checkInMonthYear=072018&checkOutDate=26&checkOutMonthYear=072018&_PMID=99801505&GPC=MVW&viewfullsite=true">
+                this link
+              </a> to book online, or reference the Miles Vojak wedding when calling.
           </p>
           <h3>Parking</h3>
           <p>
